objects/ssot__PresentationPageProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Presentation Page Product Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PresentationPageId__c</fullName>
        <label>Presentation Page</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductGuidanceId__c</fullName>
        <label>Product Guidance</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductRecordObject__c</fullName>
        <label>Product Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductReferenceRecordId__c</fullName>
        <label>Product Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800688843_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationPageProduct_ProductRefer_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>PresentationPageProduct_ProductRefer_rel</relationshipLabel>
        <relationshipName>rel_1752800688843_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800689414_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationPageProduct_ProductGuida_rel</label>
        <referenceTo>ssot__ProductGuidance__dlm</referenceTo>
        <relationshipLabel>PresentationPageProduct_ProductGuida_rel</relationshipLabel>
        <relationshipName>rel_1752800689414_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752800692790_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PresentationPageProduct_ProductRefer_rel</label>
        <referenceTo>ssot__LifeScienceMarketableProduct__dlm</referenceTo>
        <relationshipLabel>PresentationPageProduct_ProductRefer_rel</relationshipLabel>
        <relationshipName>rel_1752800692790_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>